# FreeExpression

./: .clang-format  .gitignore  .gitinclude  CMakeLists.txt  Makefile  README.MD
.github/workflows/: c-cpp.yml
CricuitISPCartridge/: #auto_saved_files#  CricuitISPCartridge.kicad_pcb  CricuitISPCartridge.kicad_prl  CricuitISPCartridge.kicad_pro  CricuitISPCartridge.kicad_sch  CricuitISPCartridge.kicad_sch-bak  CricuitISPCartridge_log_missing3Dmodels.txt  CricuitISPCartridge_missing3Dmodels.txt  LICENSE  README.md  fp-info-cache  ~CricuitISPCartridge.kicad_sch.lck
CricuitISPCartridge/2.54 PCB Edge Connectors.pretty/: 2x10.kicad_mod
CricuitISPCartridge/gerbers/: CricuitISPCartridge-B_Cu.gbl  CricuitISPCartridge-B_Mask.gbs  CricuitISPCartridge-B_Paste.gbp  CricuitISPCartridge-B_Silkscreen.gbo  CricuitISPCartridge-Edge_Cuts.gm1  CricuitISPCartridge-F_Cu.gtl  CricuitISPCartridge-F_Mask.gts  CricuitISPCartridge-F_Paste.gtp  CricuitISPCartridge-F_Silkscreen.gto  CricuitISPCartridge-NPTH-drl_map.gbr  CricuitISPCartridge-NPTH.drl  CricuitISPCartridge-PTH-drl_map.gbr  CricuitISPCartridge-PTH.drl
docs/: Connector pinout.MD
nbproject/: configurations.xml  project.xml
nbproject/private/: configurations.xml
src/: Makefile  README.MD  cli.c  cli.h  configs.h  dial.c  dial.h  display.c  display.h  display_oled.c  display_oled.h  flash.c  flash.h  freecut.map  g_code.c  g_code.h  hpgl.c  hpgl.h  keypad.c  keypad.h  keypad_expression.c  keypad_expression.h  keys.h  main.c  scale.c  serial.c  serial.h  shvars.c  shvars.h  spi.c  stepper.c  stepper.h  tags  timer.c  timer.h  usb.c  usb.h  version.h
src/Debug/: Makefile
src/m2u8/: Makefile  tags  u8g_rot.c
src/nbproject/: configurations.xml
src/nbproject/private/: Default.properties  configurations.xml  private.xml
